translation-tool/inputs/source_meta/objects/HSvc_PRIAChronic__c.object
<CustomObject>
    <description>This object contains the fields - Product Grouping, Customer Request Type, Actual Issue and Action.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ActualIssue__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accept Payment</fullName>
                </value>
                <value>
                    <fullName>Ack customer</fullName>
                </value>
                <value>
                    <fullName>Acknowledge customer</fullName>
                </value>
                <value>
                    <fullName>Added</fullName>
                </value>
                <value>
                    <fullName>Address bandwidth</fullName>
                </value>
                <value>
                    <fullName>Adjust appointment</fullName>
                </value>
                <value>
                    <fullName>Adjust browser settings</fullName>
                </value>
                <value>
                    <fullName>Adjust due date</fullName>
                </value>
                <value>
                    <fullName>Adjust service</fullName>
                </value>
                <value>
                    <fullName>Advise PC clean up</fullName>
                </value>
                <value>
                    <fullName>Application restart</fullName>
                </value>
                <value>
                    <fullName>Apply adjustment</fullName>
                </value>
                <value>
                    <fullName>Apply adjustments</fullName>
                </value>
                <value>
                    <fullName>Apply credits</fullName>
                </value>
                <value>
                    <fullName>Apply extension</fullName>
                </value>
                <value>
                    <fullName>Apply payment</fullName>
                </value>
                <value>
                    <fullName>Apply Token(s) from bank</fullName>
                </value>
                <value>
                    <fullName>Apply tokens</fullName>
                </value>
                <value>
                    <fullName>Begin prov new service</fullName>
                </value>
                <value>
                    <fullName>Cancel account</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Communicate to customer</fullName>
                </value>
                <value>
                    <fullName>communicate to PM</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete investigate</fullName>
                </value>
                <value>
                    <fullName>Complete report</fullName>
                </value>
                <value>
                    <fullName>Complete research</fullName>
                </value>
                <value>
                    <fullName>Considering</fullName>
                </value>
                <value>
                    <fullName>Contact customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ActualIssue__c</fullName>
        <label>Actual Issue</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CustomerRequestType__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3rd Party Application</fullName>
                </value>
                <value>
                    <fullName>3rd Party Application Issue</fullName>
                </value>
                <value>
                    <fullName>3rd party Device Issue</fullName>
                </value>
                <value>
                    <fullName>3rd Party Equip</fullName>
                </value>
                <value>
                    <fullName>Ability to Solve Issue</fullName>
                </value>
                <value>
                    <fullName>Accessibility/Wait times</fullName>
                </value>
                <value>
                    <fullName>Account not Set-up</fullName>
                </value>
                <value>
                    <fullName>Account Past Due</fullName>
                </value>
                <value>
                    <fullName>Activation Failure</fullName>
                </value>
                <value>
                    <fullName>Add Authorized User</fullName>
                </value>
                <value>
                    <fullName>Add Core Service</fullName>
                </value>
                <value>
                    <fullName>Add New Core Service</fullName>
                </value>
                <value>
                    <fullName>Add New Premium Service</fullName>
                </value>
                <value>
                    <fullName>Add Premium Service</fullName>
                </value>
                <value>
                    <fullName>Add professional Voice Install</fullName>
                </value>
                <value>
                    <fullName>Add Voice Service</fullName>
                </value>
                <value>
                    <fullName>Add Wireless Router</fullName>
                </value>
                <value>
                    <fullName>Adjust service</fullName>
                </value>
                <value>
                    <fullName>Administrator login</fullName>
                </value>
                <value>
                    <fullName>Advertising/Marketing Accuracy</fullName>
                </value>
                <value>
                    <fullName>Agent Courtesy</fullName>
                </value>
                <value>
                    <fullName>Agent Courtesy/Professionalism</fullName>
                </value>
                <value>
                    <fullName>Agent Understandability</fullName>
                </value>
                <value>
                    <fullName>AP Issue</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Application Issue</fullName>
                </value>
                <value>
                    <fullName>Application Issue - Customer</fullName>
                </value>
                <value>
                    <fullName>Application Issue - Hughes</fullName>
                </value>
                <value>
                    <fullName>Apply Static IP</fullName>
                </value>
                <value>
                    <fullName>Appointment Confirmation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseRecordType__c</fullName>
        <label>Case Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B2B General Case</fullName>
                </value>
                <value>
                    <fullName>B2C General Case</fullName>
                </value>
                <value>
                    <fullName>Repair Work Order</fullName>
                </value>
                <value>
                    <fullName>Install Work Order</fullName>
                </value>
                <value>
                    <fullName>RMA</fullName>
                </value>
                <value>
                    <fullName>Office Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Sub_Type__c</fullName>
        <label>Case Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChronicRules__c</fullName>
        <label>Chronic Rules</label>
        <referenceTo>HSvc_ChronicRule__c</referenceTo>
        <relationshipLabel>RIAs For Chronic</relationshipLabel>
        <relationshipName>PRIAs_For_Chronic</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CustomerRequestType__c</fullName>
        <label>Customer Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ProductGrouping__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account past Due</fullName>
                </value>
                <value>
                    <fullName>Add/Remove Services</fullName>
                </value>
                <value>
                    <fullName>Add/Upgrade Service</fullName>
                </value>
                <value>
                    <fullName>Add new role</fullName>
                </value>
                <value>
                    <fullName>Automated Call</fullName>
                </value>
                <value>
                    <fullName>Billing Issues</fullName>
                </value>
                <value>
                    <fullName>Bill Inquiry/Dispute</fullName>
                </value>
                <value>
                    <fullName>Callback</fullName>
                </value>
                <value>
                    <fullName>Call Center Esc</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t make calls</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t receive calls</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t Receive Mail - Any</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t Receive Mail - Specific Domain(s)</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t Send Mail - Any</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t Send Mail - Specific Domain(s)</fullName>
                </value>
                <value>
                    <fullName>Cancel Order</fullName>
                </value>
                <value>
                    <fullName>Cancel Transport</fullName>
                </value>
                <value>
                    <fullName>Cancel Voice</fullName>
                </value>
                <value>
                    <fullName>Cancel VSAT</fullName>
                </value>
                <value>
                    <fullName>Cannot Locate</fullName>
                </value>
                <value>
                    <fullName>Change Service</fullName>
                </value>
                <value>
                    <fullName>Change Services</fullName>
                </value>
                <value>
                    <fullName>Chronic site</fullName>
                </value>
                <value>
                    <fullName>Chronic Sites - Non Contract</fullName>
                </value>
                <value>
                    <fullName>Circuit not Performing</fullName>
                </value>
                <value>
                    <fullName>Circuit provisioning</fullName>
                </value>
                <value>
                    <fullName>Client Request</fullName>
                </value>
                <value>
                    <fullName>Code Upgrade Cleanup</fullName>
                </value>
                <value>
                    <fullName>Community Support</fullName>
                </value>
                <value>
                    <fullName>Content Not Updating/Incorrect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HNSProduct__c</fullName>
        <label>HNS Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductGrouping__c</fullName>
        <label>Product Grouping</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CaseRecordType__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active QoS</fullName>
                </value>
                <value>
                    <fullName>Appliance</fullName>
                </value>
                <value>
                    <fullName>BOM</fullName>
                </value>
                <value>
                    <fullName>BYOB</fullName>
                </value>
                <value>
                    <fullName>Customer Gateway</fullName>
                </value>
                <value>
                    <fullName>Customer Tools</fullName>
                </value>
                <value>
                    <fullName>Digital Media</fullName>
                </value>
                <value>
                    <fullName>DVR</fullName>
                </value>
                <value>
                    <fullName>EMAIL</fullName>
                </value>
                <value>
                    <fullName>Field Maintenance</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Guest Services</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Helpdesk Support</fullName>
                </value>
                <value>
                    <fullName>Install Support</fullName>
                </value>
                <value>
                    <fullName>Key FOB</fullName>
                </value>
                <value>
                    <fullName>Modem</fullName>
                </value>
                <value>
                    <fullName>Premium Services</fullName>
                </value>
                <value>
                    <fullName>Router</fullName>
                </value>
                <value>
                    <fullName>Satellite Broadband</fullName>
                </value>
                <value>
                    <fullName>Satellite Narrowband</fullName>
                </value>
                <value>
                    <fullName>Secure LAN</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Switch</fullName>
                </value>
                <value>
                    <fullName>Terrestrial Wireless</fullName>
                </value>
                <value>
                    <fullName>Terrestrial Wireline</fullName>
                </value>
                <value>
                    <fullName>VADB</fullName>
                </value>
                <value>
                    <fullName>Voice</fullName>
                </value>
                <value>
                    <fullName>Wi-Fi</fullName>
                </value>
                <value>
                    <fullName>Wireless</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>RIA For Chronic</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PRIA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RIAs For Chronic</pluralLabel>
    <recordTypes>
        <fullName>B2BGeneralCase</fullName>
        <active>true</active>
        <label>B2B General Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>B2CGeneralCase</fullName>
        <active>true</active>
        <label>B2C General Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>InstallWorkOrder</fullName>
        <active>true</active>
        <label>Install Work Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>OfficeOnly</fullName>
        <active>true</active>
        <label>Office Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>RMA</fullName>
        <active>true</active>
        <label>RMA</label>
    </recordTypes>
    <recordTypes>
        <fullName>RepairWorkOrder</fullName>
        <active>true</active>
        <label>Repair Work Order</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Case_Record_Type_Equality</fullName>
        <active>true</active>
        <errorConditionFormula>IF( TEXT(ChronicRules__r.CaseRecordType__c) !=  TEXT(CaseRecordType__c), true, false)</errorConditionFormula>
        <errorDisplayField>CaseRecordType__c</errorDisplayField>
        <errorMessage>Please select the same record type as is specified in the chronic rule.</errorMessage>
    </validationRules>
</CustomObject>